# simple_jpeg_decoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: sjpg_bit_stream.h  sjpg_decoder.h  sjpg_huffman_table.h  sjpg_log.h  sjpg_segments.h
tests/: CMakeLists.txt  test_bit_stream.cpp  test_huffman_table.cpp  test_jpeg_decoder.cpp
